# Parallel-task-scheduling-Branch-And-Bound-with-OpenMPI

./: README.md
cmake/: CMakeLists.txt
src/: bratley.cpp
